--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ html {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+
 }
 
 .projectsbg{
     background-color: #E2A499;
-    padding: 0 40px 0 40px;
+    padding: 0 3% 0 3%;
 }
 
 body {
@@ -114,7 +115,7 @@ p {
     padding: 0 0 0 0; 
     position:relative ; 
     padding: 40px 40px 0 0;
-    display: inline-block
+    width: 100%;
 
 }
 
@@ -133,10 +134,10 @@ p {
 
 .rotating-image {
     animation: 1s spin infinite linear;
-    filter: drop-shadow(30px 30px 4px #e7c2ba); 
-    width: 70%; 
+    filter: drop-shadow(20px 20px 4px #e7c2ba); 
+    width: 60%; 
     height: auto;
-    padding: 40px 0 40px 0;
+    padding: 5% 0 5% 0;
 }
 
 .left-intro-col{
@@ -152,7 +153,7 @@ p {
 
 .about-col1{
     background-color: #e7c2ba;
-    padding: 0 40px 0 40px;
+    padding: 0 3% 0 3%;
 }
 
 .about-col2{
@@ -160,7 +161,7 @@ p {
     display: flex; 
     justify-content: center; 
     align-items: center;
-    padding: 0 40px 0 40px;
+    padding: 0 3% 0 3%;
 }
 
 .star1{
@@ -178,13 +179,13 @@ p {
 .star3{
     width:10%; 
     height:auto; 
-    transform:translate(800%, -50%)
+    transform:translate(650%, -50%)
 }
 
 .star4 {
     width:10%;
     height:auto; 
-    transform:translate(930%, -40%)
+    transform:translate(800%, -40%)
 }
 
 .squiggle{
@@ -209,7 +210,7 @@ p {
     position:absolute; 
     top:0; 
     right:0; 
-    transform: translate(-100%, 0%) rotate(120deg);
+    transform: translate(-200%, -10%) rotate(120deg);
 }
 
 .soft-eng{
@@ -220,9 +221,9 @@ p {
 }
 
 .half-moon{
-    width:70%; 
+    width:55%; 
     height:auto; 
-    transform: rotate(-90deg) translate(40%, 100%);
+    transform: rotate(-90deg) translate(50%, 40%);
     
 }
 
@@ -232,12 +233,12 @@ p {
 
 .workbg {
     background-color: #eddcd2;
-    padding: 0 40px 0 40px;
+    padding: 0 3% 0 3%;
 }
 
 .workcol2{
     background-color: #CB997E;
-    padding: 2rem 2rem 2rem 2rem;
+    padding: 5% 5% 5% 5%;
     border-radius: 0 0 50% 50%;
     overflow-wrap: break-word;
     word-break: break-word;
@@ -263,5 +264,9 @@ p {
 
 .carousel-col{
     padding: 0 0 0 0;
+}
+
+b {
+    color: #e68268
 }
 
